fix : 모달 z-index

--- a/hyunique_app/src/main/webapp/resources/css/filterModal.css
+++ b/hyunique_app/src/main/webapp/resources/css/filterModal.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7); /* 배경을 어둡게 만듭니다. */
-    z-index: 1;
+    z-index: 3;
     align-items: center;
     justify-content: center;
     overflow: auto;
